<resources>
    <string name="app_name">OCR</string>
    <string name="version_info">Версия: 1.0.0</string>
    <string name="app_descr">Программа предназначена для распознавания текста с фотографий документов.</string>
    <string name="hello_text">Добро пожаловать в программу для распознавания текста с фото документов!</string>
    <string name="developers">Разработчики: \n* Даниил Середа\n* Александр Кириллов</string>
    <string name="app_info_other">Создано для курсовой работы по конструированию ПО</string>
    <string name="vogu_header">ВоГУ</string>
    <string name="year_header">2020 г.</string>
    <string name="drawer_open">Открыть боковое меню</string>
    <string name="drawer_close">Закрыть боковое меню</string>
    <string name="drawer_header_basic">Основное</string>
    <string name="drawer_item_main">Главная</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_exit">Выход</string>
    <string name="drawer_item_other">Прочее</string>
    <string name="drawer_item_about">О программе</string>
    <string name="drawer_item_connect">Обратная связь</string>
    <string name="choose_image_source_title">Пожалуйста выберите источник получения изображения документа:</string>
    <string name="open_camera_title">Открыть камеру</string>
    <string name="open_gallery_title">Открыть галерею</string>
    <string name="open_url_title">Открыть по прямой ссылке (URL)</string>
    <string name="url_image_enter_title">Введите URL картинки:</string>
    <string name="url_example">http://example.com/image.jpg</string>
    <string name="load">Загрузить</string>
    <string name="cancel">Отмена</string>
    <string name="image_editor_title">Редакт. изображения</string>
    <string name="please_wait_title">Пожалуйста подождите</string>
    <string name="image_processing">Обрабатываем изображение...</string>
    <string name="crop_error">Произошла ошибка при кадрировании изображения...</string>
    <string name="exit_question">Выйти из приложения?</string>
    <string name="exit_q_conf">Вы действительно хотите выйти?</string>
    <string name="exit">Выход</string>
    <string name="sending_message">Отправка сообщения...</string>
    <string name="result_header">Результат распознавания текста с изображения</string>
    <string name="editText_hint">* тут будет размещаться распознанный текст, доступный для редактирования... *</string>
    <string name="progressBar_text">Обработка....\n\nПожалуйста подождите!</string>
    <string name="chooselang">Выберите язык распознаваемого текста:</string>
    <string name="choose_apptheme_title">Выберите тему приложения:</string>
    <string name="light_theme_title">Светлая тема</string>
    <string name="dark_theme_title">Темная тема</string>
    <string name="other_title">Прочее:</string>
    <string name="clear_app_cache_title">Очистить кеш приложения</string>
    <string name="cleanup_success">Очистка успешна!</string>
    <string name="cleanup_error">Очистка не удалась!</string>
    <string name="errorH">Ошибка</string>
    <string name="load_image_error">Произошла ошибка при загрузке изображения. Проверьте ссылку и интернет-соединение!</string>
    <string name="load_image_error_short">Произошла ошибка при загрузке изображения</string>
    <string name="choose_image_error">Ошибка. Вы не выбрали изображение!</string>
    <string name="access_storage_error">Произошла ошибка при получении доступа к внутренней памяти устройства.</string>
    <string name="camera_error_title">Ошибка. Пожалуйста попробуйте выполнить действие снова!</string>
    <string name="prefs_theme_key">theme</string>
    <string name="ocrprogresstext">Пожалуйста подождите... \nОсуществляется распознавание текста с фото...</string>
    <string name="ocrattention">Обратите внимание, скорость распознавания зависит от:\n* мощности устройства\n* качества изображения\n* количества текста</string>
    <string name="chooseFormatHeader">Выберите формат, в котором хотите сохранить текст:</string>
    <string name="goToMain">НА ГЛАВНУЮ</string>
    <string name="saveTitle">Сохранить</string>
    <string name="errorSaving">При сохранении файла произошла ошибка! Пожалуйста попробуйте еще раз!</string>
    <string name="savingSuccess">Файл успешно сохранен!\n\nПуть: </string>
    <string name="enterFileName">Введите имя файла (без расширения):</string>
    <string name="exportFileNameaddition">Если данное поле оставить незаполненным, файлу присвоится имя, соответствующее текущей дате и времени</string>
    <string-array name="languages">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
</resources>
