<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/choose_apptheme_title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/lightThemeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_button"
                android:foregroundGravity="center_vertical|center_horizontal|center"
                android:gravity="end|center_vertical|center_horizontal"
                android:padding="20dp"
                android:text="@string/light_theme_title"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/darkThemeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_button"
                android:foregroundGravity="center_vertical|center_horizontal|center"
                android:gravity="end|center_vertical|center_horizontal"
                android:padding="20dp"
                android:text="@string/dark_theme_title"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/other_title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/clearCache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:gravity="end|center_horizontal"
                android:padding="20dp"
                android:text="@string/clear_app_cache_title"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
